# fcc-machine-learning-projects

./: Farraz_fcc_submission_cat_dog.ipynb  fcc_book_recommendation_knn.ipynb  predict_health_costs_with_regression.ipynb  sms_spam_classification.ipynb
Rock-Paper-Scissor/: README.md  RPS.py  pyproject.toml
predict health cost/: predict_health_costs_with_regression.ipynb
